[package]
name = "version"
version = "0.1.1"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <marcos56@mailbox.org>"]
description = "A library to handle version numbers"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
serde_json = "^1"
serde_test = "^1"
